--- a/src/main/webapp/listCalificacion.xhtml
+++ b/src/main/webapp/listCalificacion.xhtml
@@ -39,6 +39,11 @@
 					Eliminar
 					</h:commandLink>
 				</p:column>
+				<p:column headerText="Operación">
+					<h:commandLink action="#{calificacionController.updatePre(c)}"
+						value="Modificar">
+					</h:commandLink>
+				</p:column>
 
 			</p:dataTable>
 		</h:form>
